rna-transcription FP but fails, triangle FP success

--- a/typescript/triangle/.eslintrc
+++ b/typescript/triangle/.eslintrc
@@ -17,18 +17,19 @@
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
+    "plugin:functional/external-recommended",
+    "plugin:functional/recommended"
   ],
   "globals": {
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly"
   },
-  "plugins": [
-    "@typescript-eslint"
-  ],
+  "plugins": ["@typescript-eslint", "functional"],
   "rules": {
     "@typescript-eslint/array-type": "off", // Styling not forced upon the student
     "@typescript-eslint/explicit-function-return-type": [
-      "warn", {
+      "warn",
+      {
         "allowExpressions": false,
         "allowTypedFunctionExpressions": true,
         "allowHigherOrderFunctions": true
@@ -37,28 +38,36 @@
     "@typescript-eslint/explicit-member-accessibility": "off", // Styling not forced upon the student
     "@typescript-eslint/indent": "off", // Styling not forced upon the student
     "@typescript-eslint/no-inferrable-types": [
-      "error", {
+      "error",
+      {
         "ignoreParameters": true
       }
     ],
     "@typescript-eslint/member-delimiter-style": "off", // Styling not forced upon the student
     "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/no-parameter-properties": [
-      "warn", {
+      "warn",
+      {
         "allows": [
-          "private", "protected", "public",
-          "private readonly", "protected readonly", "public readonly"
+          "private",
+          "protected",
+          "public",
+          "private readonly",
+          "protected readonly",
+          "public readonly"
         ]
       }
     ], // only disallow readonly without an access modifier
     "@typescript-eslint/no-unused-vars": "off", // Covered by the tsc compiler (noUnusedLocals)
     "@typescript-eslint/no-use-before-define": [
-      "error", {
+      "error",
+      {
         "functions": false,
         "typedefs": false
       }
     ], // Prevent bugs, not styling
     "semi": "off", // Always disable base-rule
-    "@typescript-eslint/semi": "off" // Styling not forced upon student
+    "@typescript-eslint/semi": "off", // Styling not forced upon student
+    "functional/no-conditional-statement": "off"
   }
 }
