--- a/typescript/word-count/.eslintrc
+++ b/typescript/word-count/.eslintrc
@@ -16,7 +16,7 @@
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/recommended"
   ],
   "globals": {
     "Atomics": "readonly",
